section2 is added

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
       </div>
     </header>
     <main>
-      <section class="section-1">
+      <section class="section1">
         <div class="section1-container">
           <div class="sec1-img-container">
             <img src="images/person.png" alt="" class="sec1-img" />
           </div>
           <div class="sec1-text-container">
-            <h2 class="sec1-title">
+            <h2 class=" sec-title">
               My Failure of 
               Prvious year
             </h2>
-            <p class="sec1-desc">
+            <p class="sec-desc">
               Contrary to popular belief, Lorem Ipsum is not simply random text.
               It has roots in a piece of classical Latin literature from 45 BC,
               making it over 2000 years old. Richard McClintock.<ul>
@@ -55,6 +55,27 @@
             
           </div>
         </div>
+      </section>
+      <section class="section2">
+        <div class="section2-container">
+            <div class="section2-text-content">
+            <h2 class="sec-title">
+                My Goal of 
+                Current year
+              </h2>
+              <p class="sec-desc">
+                Contrary to popular belief, Lorem Ipsum is not simply random  <br> It has roots in a piece of classical Latin literature from 45 BC,
+                making it over 2000 years old. Richard McClintock.<ul>
+                  <li>Contrary to popular belief, is not simply</li>
+                  <li>Contrary to popular belief</li>
+                  <li>Contrary to popular , is not simply.</li>
+                  <li>Contrary to popular belief, is not simply.</li>
+                  <li>Contrary to popular simply.</li>
+                </ul>
+              </p>
+            </div>
+
+        </div>       
       </section>
     </main>
     <footer></footer>
