--- a/index.html
+++ b/index.html
@@ -77,6 +77,59 @@
 
         </div>       
       </section>
+      <section class="section-3">
+        <div class="section3-title">My Plans</div>
+        <div class="plan-container">
+            <div class="web-dev">
+                <div class="sec3-img">
+                    <img src="images/icons/web.png" alt="" srcset="">
+                </div>
+                <div class="sec3-title">
+                    <h2>Web Development</h2>
+                </div>
+                <div class="sec3-desc">
+                    <h3>I want to learn</h3>
+                </div>
+            </div>
+            <div class="javascript"><div class="sec3-img">
+                <img src="images/icons/js.png" alt="" srcset="">
+            </div>
+            <div class="sec3-title">
+                <h2>Javascript</h2>
+            </div>
+            <div class="sec3-desc">
+                <h3>I want to learn</h3>
+            </div></div>
+            <div class="smoking"><div class="sec3-img">
+                <img src="images/icons/smoke.png" alt="" srcset="">
+            </div>
+            <div class="sec3-title">
+                <h2>Smoking Habit</h2>
+            </div>
+            <div class="sec3-desc">
+                <h3>I want to end</h3>
+            </div></div>
+            <div class="e-commerce">
+                <div class="sec3-img">
+                    <img src="images/icons/ecom.png" alt="" srcset="">
+                </div>
+                <div class="sec3-title">
+                    <h2>E-commerce</h2>
+                </div>
+                <div class="sec3-desc">
+                    <h3>I want to develop</h3>
+                </div>
+            </div>
+        </div>
+      </section>
+      <section class="section-4">
+        <div class="contact">
+            <div class="contact-text">
+                <h1 class="contact-title">Always keep a positive mindseet</h1>
+                <button class="contact-btn">Call Now</button>
+            </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
