contact section is added'

--- a/index.html
+++ b/index.html
@@ -131,6 +131,21 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-section">
+            <div class="footer-content">
+                <div class="footer-left">
+                    <h1 class="footer-left-title">Futute</h1>
+                    <p class="footer-left-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <p class="footer-left-mail">Email : info@gmail.com</p>
+                    <p class="footer-left-phone">Phone : 056 432 123</p>
+                    <img src="images/icons/fb.png" alt="" class="facebook">
+                    <img src="images/icons/twitter.png" class="twitter" alt="">
+                    <img src="images/icons/youtube.png" alt="" class="youtube">
+                </div>
+                <div class="footer-right"></div>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
