--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="footer-section">
             <div class="footer-content">
                 <div class="footer-left">
-                    <h1 class="footer-left-title">Futute</h1>
+                    <h1 class="footer-left-title">Future</h1>
                     <p class="footer-left-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
                     <p class="footer-left-mail">Email : info@gmail.com</p>
                     <p class="footer-left-phone">Phone : 056 432 123</p>
@@ -143,7 +143,11 @@
                     <img src="images/icons/twitter.png" class="twitter" alt="">
                     <img src="images/icons/youtube.png" alt="" class="youtube">
                 </div>
-                <div class="footer-right"></div>
+                <div class="footer-right">
+                    <h1 class="footer-right-title">Subscribe</h1>
+                    <input type="email" name="" id="" class="footer-right-email" placeholder="Enter your email"><br>
+                    <button class="footer-right-btn">Subscribe</button>
+                </div>
             </div>
         </div>
     </footer>
