--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                     <p class="footer-left-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
                     <p class="footer-left-mail">Email : info@gmail.com</p>
                     <p class="footer-left-phone">Phone : 056 432 123</p>
-                    <img src="images/icons/fb.png" alt="" class="facebook">
-                    <img src="images/icons/twitter.png" class="twitter" alt="">
-                    <img src="images/icons/youtube.png" alt="" class="youtube">
+                    <img src="images/icons/fb.png" alt="" class="socail-media">
+                    <img src="images/icons/twitter.png" class="socail-media" alt="">
+                    <img src="images/icons/youtube.png" alt="" class="socail-media">
                 </div>
                 <div class="footer-right">
                     <h1 class="footer-right-title">Subscribe</h1>
