further html file is modifief

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
       <div class="banner-container">
         <div class="banner-content">
           <h1 class="banner-title">
-            All Thinks Are<br />
-            Possible If You Beleive
+            All Thinks Are Possible If You Beleive
           </h1>
           <p class="banner-desc">
-            There are many variations of passages of Lorem Ipsum <br />
+            There are many variations of passages of Lorem Ipsum 
             available, but the majority have suffered alteration in some form,
             by injected humour, or randomised words
           </p>
